--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h2>1. The Crew Song (Pirate Theme)</h2>
             <p>Listen to the main theme for our pirate-themed piece.</p>
             <audio controls id="audio1">
-                <source src="music/Pirate_Theme.mp3" type="audio/mpeg"> 
+                <source src="Music/Pirate_Theme.mp3" type="audio/mpeg"> 
                 Your browser does not support the audio element.
             </audio>
 
@@ -110,7 +110,7 @@
             <h2>2. Lost Boys (Mini Crew)</h2>
             <p>This track provides the background for the next section of the performance.</p>
             <audio controls id="audio2">
-                <source src="music/Lost_Boys.mp3" type="audio/mpeg">
+                <source src="Music/Lost_Boys.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
 
