add google tags to index.html

--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LPV9CBJHG8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LPV9CBJHG8');
+</script>
+
 <body>
 
     <div class="container">
